--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -4,9 +4,9 @@ all: initial;
 font-family: Helvetica Neu, Arial, sans-serif;
 
 font-size: 17px;
-line-height: 1.1em;
 
-		
+
+
 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.08);
 
 font-weight: 500;
@@ -23,18 +23,18 @@ margin: 10px;
 color: #fff;
 
 z-index: 1;
-	
+
 /*For IE*/
 
 }
 
 .pay-button:hover {
-	border: 2px solid #F57A00;
-	font-weight: 400;
-	transition-property: width, border-radius, background-color;
+border: 2px solid #F57A00;
+font-weight: 400;
+transition-property: width, border-radius, background-color;
 transition-duration: 1s, 2s, 5s;
-transition-timing-function:  ease, ease-out, linear;
-	
+transition-timing-function:ease, ease-out, linear;
+
 }
 
 .pay-button > span {
@@ -97,7 +97,7 @@ background: transparent;
 /*For IE*/
 }
 .dbl:hover {
-	border: 4px double #F57A00;
+border: 4px double #F57A00;
 }
 .dbl > span {
 background: linear-gradient(45deg, #FFF 50%, #F59332 50%);
@@ -123,7 +123,7 @@ background: transparent;
 /*For IE*/
 }
 .bare:hover {
-	border: 0px solid #F59332;
+border: 0px solid #F59332;
 }
 .bare > span {
 background: linear-gradient(45deg, #FFF 50%, #F59332 50%);
@@ -146,7 +146,7 @@ border: 2px solid #e67e22;
 /*For IE*/
 }
 .ca:hover {
-	border: 2px solid #e67e22;
+border: 2px solid #e67e22;
 }
 .ca > span {
 background: linear-gradient(45deg, #fff 50%, #e67e22 50%);
@@ -166,7 +166,7 @@ border: 2px solid #e67e22;
 /*For IE*/
 }
 .carev:hover {
-	border: 2px solid #e67e22;
+border: 2px solid #e67e22;
 }
 .carev > span {
 background: linear-gradient(45deg, #e67e22 50%, #FFF 50%);
@@ -187,7 +187,7 @@ background: transparent;
 /*For IE*/
 }
 .cadbl:hover {
-	border: 4px double #e67e22;
+border: 4px double #e67e22;
 }
 .cadbl > span {
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
@@ -213,7 +213,7 @@ background: transparent;
 /*For IE*/
 }
 .cabare:hover {
-	border: 0px solid #e67e22;
+border: 0px solid #e67e22;
 }
 .cabare > span {
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
@@ -236,7 +236,7 @@ border: 2px solid #c0392b;
 /*For IE*/
 }
 .po:hover {
-	border: 2px solid #c0392b;
+border: 2px solid #c0392b;
 }
 .po > span {
 background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
@@ -256,7 +256,7 @@ border: 2px solid #c0392b;
 /*For IE*/
 }
 .porev:hover {
-	border: 2px solid #c0392b;
+border: 2px solid #c0392b;
 }
 .porev > span {
 background: linear-gradient(45deg, #c0392b 50%, #FFF 50%);
@@ -277,7 +277,7 @@ background: transparent;
 /*For IE*/
 }
 .podbl:hover {
-	border: 4px double #c0392b;
+border: 4px double #c0392b;
 }
 .podbl > span {
 background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
@@ -303,7 +303,7 @@ background: transparent;
 /*For IE*/
 }
 .pobare:hover {
-	border: 0px solid #c0392b;
+border: 0px solid #c0392b;
 }
 .pobare > span {
 background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
@@ -326,7 +326,7 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .wa:hover {
-	border: 2px solid #34495e;
+border: 2px solid #34495e;
 }
 .wa > span {
 background: linear-gradient(45deg, #fff 50%, #34495e 50%);
@@ -346,7 +346,7 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .warev:hover {
-	border: 2px solid #34495e;
+border: 2px solid #34495e;
 }
 .warev > span {
 background: linear-gradient(45deg, #34495e 50%, #FFF 50%);
@@ -367,7 +367,7 @@ background: transparent;
 /*For IE*/
 }
 .wadbl:hover {
-	border: 4px double #34495e;
+border: 4px double #34495e;
 }
 .wadbl > span {
 background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
@@ -393,7 +393,7 @@ background: transparent;
 /*For IE*/
 }
 .wabare:hover {
-	border: 0px solid #34495e;
+border: 0px solid #34495e;
 }
 .wabare > span {
 background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
@@ -416,7 +416,7 @@ border: 2px solid #4CCA47;
 /*For IE*/
 }
 .gr:hover {
-	border: 2px solid #4CCA47;
+border: 2px solid #4CCA47;
 }
 .gr > span {
 background: linear-gradient(45deg, #fff 50%, #4CCA47 50%);
@@ -436,7 +436,7 @@ border: 2px solid #4CCA47;
 /*For IE*/
 }
 .grrev:hover {
-	border: 2px solid #4CCA47;
+border: 2px solid #4CCA47;
 }
 .grrev > span {
 background: linear-gradient(45deg, #4CCA47 50%, #FFF 50%);
@@ -457,7 +457,7 @@ background: transparent;
 /*For IE*/
 }
 .grdbl:hover {
-	border: 4px double #4CCA47;
+border: 4px double #4CCA47;
 }
 .grdbl > span {
 background: linear-gradient(45deg, #FFF 50%, #4CCA47 50%);
@@ -483,7 +483,7 @@ background: transparent;
 /*For IE*/
 }
 .grbare:hover {
-	border: 0px solid #4CCA47;
+border: 0px solid #4CCA47;
 }
 .grbare > span {
 background: linear-gradient(45deg, #FFF 50%, #4CCA47 50%);
@@ -521,8 +521,8 @@ background: linear-gradient(45deg, #000000 50%, #000000 50%);
 }
 
 .spice:hover {
-	border: 3px solid #000;
-	font-weight: normal;
+border: 3px solid #000;
+font-weight: normal;
 }
 
 .spice:after {
@@ -545,13 +545,14 @@ transition: 1.1s, font-size 1.1s;
 
 /* begin modal button */
 .modal {
+width: 254px;
+font-size: 18px;
 border: 2px solid #e67e22;
 margin: 10px 0px 0px 0px;
-width: 260px;
 /*For IE*/
 }
 .modal:hover {
-	border: 2px solid #e67e22;
+border: 2px solid #e67e22;
 }
 .modal > span {
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
