--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -2,13 +2,8 @@
 .pay-button {
 all: initial;
 font-family: Helvetica Neu, Arial, sans-serif;
-
 font-size: 17px;
-
-
-
 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.08);
-
 font-weight: 500;
 border-radius: 4px;
 cursor: pointer;
@@ -21,7 +16,6 @@ max-width: 270px;
 text-align: center;
 margin: 10px;
 color: #fff;
-
 z-index: 1;
 
 /*For IE*/
@@ -29,12 +23,7 @@ z-index: 1;
 }
 
 .pay-button:hover {
-border: 2px solid #F57A00;
-font-weight: 400;
-transition-property: width, border-radius, background-color;
-transition-duration: 1s, 2s, 5s;
-transition-timing-function:ease, ease-out, linear;
-
+font-weight: 500;
 }
 
 .pay-button > span {
@@ -74,6 +63,13 @@ color: #F59332;
 /*For IE*/
 }
 
+.pay-button:active{
+  transform: translateY(1px);
+  opacity: 0.95;  
+  box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.20);
+  /* filter: saturate(80%);*/
+}
+
 .rev {
 
 /*For IE*/
@@ -91,39 +87,12 @@ background-size: 300%;
 background-position: 100%;
 }
 
-.dbl {
-border: 1px solid #F57A00;
-background: transparent;
-/*For IE*/
-}
-.dbl:hover {
-border: 4px double #F57A00;
-}
-.dbl > span {
-background: linear-gradient(45deg, #FFF 50%, #F59332 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.dbl:after {
-background: linear-gradient(35deg, #F59332 50%, transparent 50%);
-}
-.dbl > span,.dbl:after {
-background-size: 300%;
-background-position: 100%;
-transition: 1s, font-size 1.1s;
-}
-.dbl:hover > span,.dbl:hover:after {
-padding: .51em;
-color: #F59332;
-}
-
 .bare {
 border: 0px solid #F59332;
 background: transparent;
 /*For IE*/
 }
 .bare:hover {
-border: 0px solid #F59332;
 }
 .bare > span {
 background: linear-gradient(45deg, #FFF 50%, #F59332 50%);
@@ -146,7 +115,6 @@ border: 2px solid #e67e22;
 /*For IE*/
 }
 .ca:hover {
-border: 2px solid #e67e22;
 }
 .ca > span {
 background: linear-gradient(45deg, #fff 50%, #e67e22 50%);
@@ -166,7 +134,7 @@ border: 2px solid #e67e22;
 /*For IE*/
 }
 .carev:hover {
-border: 2px solid #e67e22;
+
 }
 .carev > span {
 background: linear-gradient(45deg, #e67e22 50%, #FFF 50%);
@@ -181,39 +149,12 @@ background-size: 300%;
 background-position: 100%;
 }
 
-.cadbl {
-border: 1px solid #e67e22;
-background: transparent;
-/*For IE*/
-}
-.cadbl:hover {
-border: 4px double #e67e22;
-}
-.cadbl > span {
-background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.cadbl:after {
-background: linear-gradient(35deg, #e67e22 50%, transparent 50%);
-}
-.cadbl > span,.cadbl:after {
-background-size: 300%;
-background-position: 100%;
-transition: 1s, font-size 1.1s;
-}
-.cadbl:hover > span,.cadbl:hover:after {
-padding: .55em;
-color: #e67e22;
-}
-
 .cabare {
 border: 0px solid #e67e22;
 background: transparent;
 /*For IE*/
 }
 .cabare:hover {
-border: 0px solid #e67e22;
 }
 .cabare > span {
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
@@ -236,7 +177,6 @@ border: 2px solid #c0392b;
 /*For IE*/
 }
 .po:hover {
-border: 2px solid #c0392b;
 }
 .po > span {
 background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
@@ -256,7 +196,6 @@ border: 2px solid #c0392b;
 /*For IE*/
 }
 .porev:hover {
-border: 2px solid #c0392b;
 }
 .porev > span {
 background: linear-gradient(45deg, #c0392b 50%, #FFF 50%);
@@ -271,39 +210,12 @@ background-size: 300%;
 background-position: 100%;
 }
 
-.podbl {
-border: 1px solid #c0392b;
-background: transparent;
-/*For IE*/
-}
-.podbl:hover {
-border: 4px double #c0392b;
-}
-.podbl > span {
-background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.podbl:after {
-background: linear-gradient(35deg, #c0392b 50%, transparent 50%);
-}
-.podbl > span,.podbl:after {
-background-size: 300%;
-background-position: 100%;
-transition: 1s, font-size 1.1s;
-}
-.podbl:hover > span,.podbl:hover:after {
-padding: .55em;
-color: #c0392b;
-}
-
 .pobare {
 border: 0px solid #c0392b;
 background: transparent;
 /*For IE*/
 }
 .pobare:hover {
-border: 0px solid #c0392b;
 }
 .pobare > span {
 background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
@@ -326,7 +238,6 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .wa:hover {
-border: 2px solid #34495e;
 }
 .wa > span {
 background: linear-gradient(45deg, #fff 50%, #34495e 50%);
@@ -346,7 +257,6 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .warev:hover {
-border: 2px solid #34495e;
 }
 .warev > span {
 background: linear-gradient(45deg, #34495e 50%, #FFF 50%);
@@ -361,39 +271,12 @@ background-size: 300%;
 background-position: 100%;
 }
 
-.wadbl {
-border: 1px solid #34495e;
-background: transparent;
-/*For IE*/
-}
-.wadbl:hover {
-border: 4px double #34495e;
-}
-.wadbl > span {
-background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.wadbl:after {
-background: linear-gradient(35deg, #34495e 50%, transparent 50%);
-}
-.wadbl > span,.wadbl:after {
-background-size: 300%;
-background-position: 100%;
-transition: 1s, font-size 1.1s;
-}
-.wadbl:hover > span,.wadbl:hover:after {
-padding: .55em;
-color: #34495e;
-}
-
 .wabare {
 border: 0px solid #34495e;
 background: transparent;
 /*For IE*/
 }
 .wabare:hover {
-border: 0px solid #34495e;
 }
 .wabare > span {
 background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
@@ -416,7 +299,6 @@ border: 2px solid #4CCA47;
 /*For IE*/
 }
 .gr:hover {
-border: 2px solid #4CCA47;
 }
 .gr > span {
 background: linear-gradient(45deg, #fff 50%, #4CCA47 50%);
@@ -436,7 +318,6 @@ border: 2px solid #4CCA47;
 /*For IE*/
 }
 .grrev:hover {
-border: 2px solid #4CCA47;
 }
 .grrev > span {
 background: linear-gradient(45deg, #4CCA47 50%, #FFF 50%);
@@ -451,39 +332,12 @@ background-size: 300%;
 background-position: 100%;
 }
 
-.grdbl {
-border: 1px solid #4CCA47;
-background: transparent;
-/*For IE*/
-}
-.grdbl:hover {
-border: 4px double #4CCA47;
-}
-.grdbl > span {
-background: linear-gradient(45deg, #FFF 50%, #4CCA47 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.grdbl:after {
-background: linear-gradient(35deg, #4CCA47 50%, transparent 50%);
-}
-.grdbl > span,.grdbl:after {
-background-size: 300%;
-background-position: 100%;
-transition: 1s, font-size 1.1s;
-}
-.grdbl:hover > span,.grdbl:hover:after {
-padding: .55em;
-color: #4CCA47;
-}
-
 .grbare {
 border: 0px solid #4CCA47;
 background: transparent;
 /*For IE*/
 }
 .grbare:hover {
-border: 0px solid #4CCA47;
 }
 .grbare > span {
 background: linear-gradient(45deg, #FFF 50%, #4CCA47 50%);
@@ -521,7 +375,6 @@ background: linear-gradient(45deg, #000000 50%, #000000 50%);
 }
 
 .spice:hover {
-border: 3px solid #000;
 font-weight: normal;
 }
 
@@ -552,7 +405,6 @@ margin: 10px 0px 0px 0px;
 /*For IE*/
 }
 .modal:hover {
-border: 2px solid #e67e22;
 }
 .modal > span {
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
