--- a/pre-release/v0.1/css/modal.css
+++ b/pre-release/v0.1/css/modal.css
@@ -4,25 +4,21 @@ position: fixed;
 z-index: 9998;
 top: 0;
 left: 0;
-
 opacity: 0;
-
 width: 100%;
 height: 100%;
-
 -webkit-transition: 1ms opacity ease;
  -moz-transition: 1ms opacity ease;
 -ms-transition: 1ms opacity ease;
  -o-transition: 1ms opacity ease;
 transition: 1ms opacity ease;
-
 background: rgba(0,0,0,.6);
 }
 
 .paybutton-modal {
 all: initial;
 font-family: Helvetica Neu, Arial, sans-serif;
-font-size: 1em;
+font-size: 16px;
 position: fixed;
 z-index: 9999;
 top: 50%;
@@ -151,6 +147,15 @@ transition: 300ms opacity 300ms ease;
 	margin: auto;
 	display: block;
 }
+
+.qrparent:active{
+
+  opacity: 0.95;  
+
+	padding: 2px;
+  /* filter: saturate(80%);*/
+}
+
 .qrcode {
 	position: relative;
 	border: 2px solid #000000;
@@ -166,7 +171,6 @@ transition: 300ms opacity 300ms ease;
   bottom: 0;
   margin: auto;
   display: block;
-
 
 }
 .qrctc {
@@ -200,10 +204,11 @@ transition: 300ms opacity 300ms ease;
 	display: block;
 }
 
-.qrparent:active{
+.txdialoguediv {
+	position: relative;
+	font-size: 16px;
+  word-wrap: break-word;
+	margin: 10px;
+	display: block;
 
-  opacity: 0.95;  
-
-	padding: 2px;
-  /* filter: saturate(80%);*/
 }
