--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -1,5 +1,5 @@
 /* begin default button set */
-.pay-button {
+.pay-button, .pay-button:hover {
 all: initial;
 font-family: Helvetica Neu, Arial, sans-serif;
 font-size: 17px;
@@ -15,22 +15,14 @@ min-width: 200px;
 max-width: 270px;
 text-align: center;
 margin: 10px;
-color: #fff;
 z-index: 1;
-
-/*For IE*/
-
-}
-
-.pay-button:hover {
-font-weight: 500;
 }
 
 .pay-button > span {
 display: inline-block;
 padding: 12px 8px;
 position: relative;
-background: linear-gradient(45deg, #fff 50%, #F57A00 50%);
+background: linear-gradient(45deg, #FFFFFF 50%, #F57A00 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 z-index: -1;
@@ -43,193 +35,76 @@ top: 0;
 bottom: 0;
 left: 0;
 right: 0;
-background: linear-gradient(20deg, #F59332 50%, transparent 50%);
+background: linear-gradient(45deg, #F59332 50%, transparent 50%);
+font-size: 18px;
 z-index: -5;
 }
 
 .pay-button > span,.pay-button:after {
 background-size: 300%;
 background-position: 100%;
-transition: .9s, text 10s;
-
-
+transition: .8s, font-weight .5s;
 }
 
 .pay-button:hover > span,.pay-button:hover:after {
+font-weight: 500;
 background-position: 0;
-/*padding: .75em;*/
-/*font-size: 1.1em;*/
-color: #F59332;
-/*For IE*/
 }
 
 .pay-button:active{
-  transform: translateY(1px);
-  opacity: 0.95;  
-  box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.20);
-  /* filter: saturate(80%);*/
+transform: translateY(1px);
+opacity: 0.95;  
+box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.20);
 }
 
 .rev {
 
-/*For IE*/
 }
+.rev:hover {
+
+}
+
 .rev > span {
-background: linear-gradient(45deg, #F57A00 50%, #FFF 50%);
+background: linear-gradient(45deg, #F57A00 50%, #FFFFFF 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
+
 .rev:after {
-background: linear-gradient(20deg, transparent 50%, #F59332 50%);
+background: linear-gradient(45deg, transparent 50%, #F59332 50%);
 }
+
 .rev > span, .rev:after {
 background-size: 300%;
 background-position: 100%;
 }
 
 .bare {
-border: 0px solid #F59332;
+border: 0px;
 background: transparent;
 /*For IE*/
 }
+
 .bare:hover {
+border: 0px;
+background: transparent;
 }
+
 .bare > span {
-background: linear-gradient(45deg, #FFF 50%, #F59332 50%);
+background: linear-gradient(45deg, #FFF 50%, #F57A00 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
+
 .bare:after {
-background: linear-gradient(35deg, #F59332 50%, transparent 50%);
+background: linear-gradient(45deg, #F59332 50%, transparent 50%);
 }
+
 .bare > span, .bare:after {
 background-size: 300%;
 background-position: 100%;
 }
 /* end default button set */
-
-
-/* begin ca button set */
-.ca {
-border: 2px solid #e67e22;
-/*For IE*/
-}
-.ca:hover {
-}
-.ca > span {
-background: linear-gradient(45deg, #fff 50%, #e67e22 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.ca:after {
-background: linear-gradient(20deg, #e67e22 50%, transparent 50%);
-}
-.ca > span, .ca:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.carev {
-border: 2px solid #e67e22;
-/*For IE*/
-}
-.carev:hover {
-
-}
-.carev > span {
-background: linear-gradient(45deg, #e67e22 50%, #FFF 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.carev:after {
-background: linear-gradient(20deg, transparent 50%, #e67e22 50%);
-}
-.carev > span, .carev:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.cabare {
-border: 0px solid #e67e22;
-background: transparent;
-/*For IE*/
-}
-.cabare:hover {
-}
-.cabare > span {
-background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.cabare:after {
-background: linear-gradient(35deg, #e67e22 50%, transparent 50%);
-}
-.cabare > span, .cabare:after {
-background-size: 300%;
-background-position: 100%;
-}
-/* end ca button set */
-
-
-/* begin po button set */
-.po {
-border: 2px solid #c0392b;
-/*For IE*/
-}
-.po:hover {
-}
-.po > span {
-background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.po:after {
-background: linear-gradient(20deg, #c0392b 50%, transparent 50%);
-}
-.po > span, .po:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.porev {
-border: 2px solid #c0392b;
-/*For IE*/
-}
-.porev:hover {
-}
-.porev > span {
-background: linear-gradient(45deg, #c0392b 50%, #FFF 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.porev:after {
-background: linear-gradient(20deg, transparent 50%, #c0392b 50%);
-}
-.porev > span, .porev:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.pobare {
-border: 0px solid #c0392b;
-background: transparent;
-/*For IE*/
-}
-.pobare:hover {
-}
-.pobare > span {
-background: linear-gradient(45deg, #FFF 50%, #c0392b 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.pobare:after {
-background: linear-gradient(35deg, #c0392b 50%, transparent 50%);
-}
-.pobare > span, .pobare:after {
-background-size: 300%;
-background-position: 100%;
-}
-/* end po button set */
 
 
 /* begin wa button set */
@@ -238,6 +113,8 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .wa:hover {
+border: 2px solid #34495e;
+background: transparent;
 }
 .wa > span {
 background: linear-gradient(45deg, #fff 50%, #34495e 50%);
@@ -245,7 +122,7 @@ background: linear-gradient(45deg, #fff 50%, #34495e 50%);
 -webkit-text-fill-color: transparent;
 }
 .wa:after {
-background: linear-gradient(20deg, #34495e 50%, transparent 50%);
+background: linear-gradient(45deg, #34495e 50%, transparent 50%);
 }
 .wa > span, .wa:after {
 background-size: 300%;
@@ -257,6 +134,8 @@ border: 2px solid #34495e;
 /*For IE*/
 }
 .warev:hover {
+border: 2px solid #34495e;
+background: transparent;
 }
 .warev > span {
 background: linear-gradient(45deg, #34495e 50%, #FFF 50%);
@@ -264,7 +143,7 @@ background: linear-gradient(45deg, #34495e 50%, #FFF 50%);
 -webkit-text-fill-color: transparent;
 }
 .warev:after {
-background: linear-gradient(20deg, transparent 50%, #34495e 50%);
+background: linear-gradient(45deg, transparent 50%, #34495e 50%);
 }
 .warev > span, .warev:after {
 background-size: 300%;
@@ -277,6 +156,8 @@ background: transparent;
 /*For IE*/
 }
 .wabare:hover {
+border: 0px;
+background: transparent;
 }
 .wabare > span {
 background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
@@ -284,74 +165,13 @@ background: linear-gradient(45deg, #FFF 50%, #34495e 50%);
 -webkit-text-fill-color: transparent;
 }
 .wabare:after {
-background: linear-gradient(35deg, #34495e 50%, transparent 50%);
+background: linear-gradient(45deg, #34495e 50%, transparent 50%);
 }
 .wabare > span, .wabare:after {
 background-size: 300%;
 background-position: 100%;
 }
 /* end wa button set */
-
-
-/* begin gr button set */
-.gr {
-border: 2px solid #4CCA47;
-/*For IE*/
-}
-.gr:hover {
-}
-.gr > span {
-background: linear-gradient(45deg, #fff 50%, #4CCA47 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.gr:after {
-background: linear-gradient(20deg, #4CCA47 50%, transparent 50%);
-}
-.gr > span, .gr:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.grrev {
-border: 2px solid #4CCA47;
-/*For IE*/
-}
-.grrev:hover {
-}
-.grrev > span {
-background: linear-gradient(45deg, #4CCA47 50%, #FFF 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.grrev:after {
-background: linear-gradient(20deg, transparent 50%, #4CCA47 50%);
-}
-.grrev > span, .grrev:after {
-background-size: 300%;
-background-position: 100%;
-}
-
-.grbare {
-border: 0px solid #4CCA47;
-background: transparent;
-/*For IE*/
-}
-.grbare:hover {
-}
-.grbare > span {
-background: linear-gradient(45deg, #FFF 50%, #4CCA47 50%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-}
-.grbare:after {
-background: linear-gradient(35deg, #4CCA47 50%, transparent 50%);
-}
-.grbare > span, .grbare:after {
-background-size: 300%;
-background-position: 100%;
-}
-/* end gr button set */
 
 
 /* begin spice button set */
@@ -375,23 +195,28 @@ background: linear-gradient(45deg, #000000 50%, #000000 50%);
 }
 
 .spice:hover {
+font-size: 18px;
 font-weight: normal;
+border-radius: 0px;
+border: 3px solid #000000;
+background: transparent;
+padding: 0px;
+width: 270px;
+color: #000000;
 }
 
 .spice:after {
-background: linear-gradient(35deg, #E60B24 50%, transparent 50%);
+background: linear-gradient(45deg, #E60B24 50%, transparent 50%);
 }
 
 .spice > span,.spice:after {
 background-size: 300%;
 background-position: 100%;
-transition: 1.1s, font-size 1.1s;
+transition: 1s, font-weight .2s;
 }
 
 .spice:hover > span,.spice:hover:after {
-/*padding: .95em;*/
-/*font-size: 1.1em;*/
-/*For IE*/
+font-weight: 500;
 }
 /* begin spice button set */
 
@@ -400,19 +225,25 @@ transition: 1.1s, font-size 1.1s;
 .modal {
 width: 254px;
 font-size: 18px;
-border: 2px solid #e67e22;
+border: 2px solid #F57A00;
 margin: 10px 0px 0px 0px;
 /*For IE*/
 }
 .modal:hover {
+width: 254px;
+font-size: 18px;
+border: 2px solid #F57A00;
+margin: 10px 0px 0px 0px;
+background: transparent;
+/*For IE*/
 }
 .modal > span {
-background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
+background: linear-gradient(45deg, #FFFFFF 50%, #F57A00 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
 .modal:after {
-background: linear-gradient(20deg, #F7941D 50%, transparent 50%);
+background: linear-gradient(45deg, #F7941D 50%, transparent 50%);
 }
 .modal > span, .modal:after {
 background-size: 300%;
