--- a/csfiles/scss/_variables.scss
+++ b/csfiles/scss/_variables.scss
@@ -15,4 +15,4 @@ $gray-900: #212529 !default;
 $black: #000 !default;
 
 $primary: #002E66 !default;
-$secondary: #cd9557 !default;
+$secondary: #4BC846 !default;
