--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -18,6 +18,8 @@ margin: auto; !important;
 display: block; !important;
 z-index: 1 !important;
 }
+*/
+
 
 .pay-button > span {
 display: inline-block;
@@ -56,7 +58,7 @@ background-position: 0;
 transform: translateY(1px);
 opacity: 0.95;
 box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.20);
-} */
+} 
 
 .rev {
 
