--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@
   display: flex;
   flex-direction: row;
   position: fixed;
+  top: 0;
   width: 100%;
   height: auto;
   border: 20px solid red;
   padding: 10px;
   color: red;
+  z-index: 1;
 }
 
 .header h1 {
@@ -25,4 +27,70 @@
 .header img {
   height: 50px;
   margin-right: 0;
+}
+
+.main {
+  position: absolute;
+  margin-top: 125px;
+  margin-bottom: 1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  width: 98%;
+  height: calc(100vh - 135px);
+  border-left: 3px solid red;
+  border-right: 3px solid red;
+  border-bottom: 3px solid red;
+  z-index: -1;
+}
+
+nav {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+  text-decoration: none;
+  border-top: 3px solid red;
+  align-content: center;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: Roboto;
+}
+
+nav .nav-pos a {
+  color: red;
+  text-decoration: none;
+}
+
+nav .nav-pos {
+  text-decoration: none;
+  border-right: 3px solid red;
+  width: 50%;
+  padding: 20px;
+}
+
+nav .nav-widget a {
+  color: white;
+  text-decoration: none;
+}
+
+nav .nav-widget {
+  background-color: red;
+  position: relative;
+  text-decoration: none;
+  width: 50%;
+  padding: 20px;
+}
+
+.pos {
+  position: relative;
+  margin: 5%;
+  
+  background-color: blue;
+  width: 100%;
+  height: calc(100% - 70px);
+}
+
+.widget {
+  display: hide;
 }
